# do-any-good

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py
backend/app/: __init__.py  config.py  llm_client.py  main.py  overview.py  rag.py  web_search.py
backend/app/agent/: __init__.py  agent.py  prompts.py  safety.py  suggestions.py
backend/app/mcp_server/: __init__.py  server.py
backend/app/storage/: __init__.py  files.py  models.py
client/: __init__.py  gradio_app.py  test_decision.py
tests/: conftest.py  test_agent.py  test_client.py  test_config.py  test_e2e.py  test_llm_client.py  test_mcp_server.py  test_onboarding.py  test_rag.py  test_safety.py  test_storage.py  test_streaming.py  test_suggestions.py  test_tracking.py  test_web_search.py
